Almost finished with powers.